--- a/style.css
+++ b/style.css
@@ -29,9 +29,59 @@
 /*------------------------------------*\
   #SETTINGS
 \*------------------------------------*/
-/* HELA SIDAN */
-body {
-  background-color: F2F2F2;
+/*------------------------------------*\
+  #GENERIC
+\*------------------------------------*/
+.grid-container-2-col {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  row-gap: 3rem;
+}
+
+.col1 {
+  grid-column-start: 1;
+}
+
+.col2 {
+  grid-column-start: 2;
+}
+
+.row1 {
+  grid-row-start: 1;
+}
+
+.col1-2 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.row2 {
+  grid-row-start: 2;
+}
+
+.row3 {
+  grid-row-start: 3;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+/*------------------------------------*\
+  #BODY
+\*------------------------------------*/
+body, .body_education, .body_cv {
+  background-color: #F2F2F2;
+  padding: 0;
+  margin: 0;
 }
 
 section {
@@ -41,18 +91,31 @@ section {
   /* Om du vill lägga till fyllnad inuti varje avsnitt */
 }
 
-/* RUBRIKER */
-h1 {
-  color: white;
+/*------------------------------------*\
+  #TEXT BASE
+\*------------------------------------*/
+.text-montserrat, .project_button, p, h3, h2 {
+  text-align: left;
+  font-family: Montserrat, Arial, sans-serif;
+  font-weight: normal;
+}
+
+.text-croissant, .hello_cv {
   text-align: left;
   font-family: croissant one, serif;
+  font-weight: normal;
 }
-@media (min-width: 650px) {
-  h1 {
-    font-size: 30px;
-  }
+
+/*------------------------------------*\
+  #HEADERS
+\*------------------------------------*/
+h1 {
+  color: black;
+  text-align: left;
+  font-family: croissant one, serif;
+  font-size: 30px;
 }
-@media (min-width: 650px) {
+@media (min-width: 850px) {
   h1 {
     font-size: 81px;
   }
@@ -60,16 +123,70 @@ h1 {
 
 h2 {
   color: black;
-  text-align: left;
-  font-family: Montserrat, Arial, sans-serif;
-  font-weight: normal;
   font-size: 36px;
 }
+@media (max-width: 850px) {
+  h2 {
+    font-size: 20px;
+  }
+}
 
-/* HEADER */
+h3 {
+  color: black;
+  font-size: 12px;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+@media (min-width: 450px) {
+  h3 {
+    font-size: 24px;
+  }
+}
+
+/*------------------------------------*\
+  #OTHER TEXT
+\*------------------------------------*/
+p {
+  color: black;
+  font-size: 15px;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+@media (min-width: 450px) {
+  p {
+    font-size: 24px;
+    word-break: normal;
+  }
+}
+
+.right-align {
+  text-align: right;
+}
+
+/*------------------------------------*\
+  #IMAGES
+\*------------------------------------*/
+.img-scale {
+  max-width: 100%;
+}
+
+.logo {
+  height: 2rem;
+}
+
+/*------------------------------------*\
+  #PAGE HEADER
+\*------------------------------------*/
 .header {
   display: flex;
   flex-direction: column;
+  background-color: #F2F2F2;
+  margin: 0;
 }
 
 .image_and_menu_container {
@@ -82,6 +199,7 @@ h2 {
   align-items: center;
   padding-left: 5rem;
   height: 3.75rem;
+  background-color: #F2F2F2;
 }
 
 /* Start-info för bild med text */
@@ -91,24 +209,38 @@ h2 {
   /* Ändra textjusteringen till vänster */
 }
 
+.header_image_text_small {
+  position: relative;
+  text-align: left;
+  width: 100%;
+  height: 30vw;
+  /* Ändra textjusteringen till vänster */
+}
+
 /* Storlek på bild med text */
-.headerbild {
+.headerbild_index {
   width: 100%;
   /* Anpassa bilden till bredden av behållaren */
 }
 
+/* Storlek på bild med text */
+.header_image_small {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Anpassa bilden till bredden av behållaren */
+}
+
 /* Stil för rubrik på bild */
-.rubriktext {
+.rubriktext_index {
   position: absolute;
   text-align: right;
   /* Placera rubriken på bilden */
   top: 50%;
   /* Justera vertikalt till mitten */
   left: 10px;
-  /* Placera till vänster med en lämplig marginal */
-  transform: translateY(-50%);
   /* Centrera vertikalt */
-  /*background-color: rgba(0, 0, 0, 0);*/
+  transform: translateY(-50%);
   /* Bakgrundsfärg med genomskinlighet */
   color: #fff;
   /* Textfärg */
@@ -116,16 +248,36 @@ h2 {
   /* Lägg till lite utrymme runt texten */
 }
 
-/* NAV */
+/* Stil för rubrik på bild */
+.header_text_centered {
+  position: absolute;
+  text-align: center;
+  /* Placera rubriken på bilden */
+  top: 0%;
+  /* Justera vertikalt till mitten */
+  left: 50%;
+  /* Centrera vertikalt */
+  transform: translateX(-50%);
+  /* Bakgrundsfärg med genomskinlighet */
+  color: #fff;
+  /* Textfärg */
+  padding: 10px;
+  /* Lägg till lite utrymme runt texten */
+}
+
+/*------------------------------------*\
+  #NAV MENU
+\*------------------------------------*/
 .menu_box {
   align-items: start;
   justify-content: end;
   column-gap: 1rem;
-  background-color: F2F2F2;
+  background-color: #F2F2F2;
 }
 
 .menu {
   display: flex;
+  flex-shrink: 1;
   column-gap: 0.5rem;
   width: 1.3rem;
   rotate: 90deg;
@@ -137,19 +289,133 @@ nav a {
   text-decoration: none;
 }
 
-/* BODY */
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
+/*------------------------------------*\
+  #PROJECTS
+\*------------------------------------*/
+.project_img {
+  width: 75%;
+}
+@media (min-width: 850px) {
+  .project_img {
+    width: auto;
+    position: relative;
+    left: 60%;
+    transform: translateX(-50%);
+  }
 }
 
-/* FOOTER */
-.footer_text {
+.project_button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
   color: black;
-  text-align: left;
-  font-family: Montserrat, Arial, sans-serif;
+  text-decoration: underline;
+}
+
+/*------------------------------------*\
+  #CV
+\*------------------------------------*/
+.hello_cv {
+  color: #F2F2F2;
+  margin: 0;
+  padding: 0;
+  font-size: 40px;
+}
+@media (min-width: 450px) {
+  .hello_cv {
+    font-size: 81px;
+  }
+}
+@media (min-width: 850px) {
+  .hello_cv {
+    font-size: 221px;
+  }
+}
+
+.body_cv {
+  background-color: #968FA6;
+  color: #F2F2F2;
+}
+
+.body_cv p {
+  color: #F2F2F2;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.body_cv h3, h4, h5 {
+  color: #F2F2F2;
+  font-size: 36px;
+  line-height: normal;
   font-weight: normal;
-  font-size: 15px;
+}
+
+.body_cv h5 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+.internship_header {
+  margin: 0;
+}
+
+.internship_info {
+  margin: 0;
+  padding-left: 1rem;
+}
+
+/*------------------------------------*\
+  #EDUCATION
+\*------------------------------------*/
+.body_education {
+  background-color: #848C73;
+}
+
+.body_education p, h2, h3, h4, h5 {
+  text-align: right;
+  color: black;
+}
+
+.body_education h3 {
+  font-family: Montserrat;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 50px; /* 138.889% */
+  margin: 0;
+}
+
+.body_education h5 {
+  /* Ragna footer rubrik */
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+.body_education p {
+  /* Ragna body */
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+/*------------------------------------*\
+  #FOOTER
+\*------------------------------------*/
+.footer {
+  color: black;
+  background-color: #F2F2F2;
+  text-align: left;
 }
 
 /*# sourceMappingURL=style.css.map */
