--- a/style.css
+++ b/style.css
@@ -29,9 +29,59 @@
 /*------------------------------------*\
   #SETTINGS
 \*------------------------------------*/
-/* HELA SIDAN */
-body {
-  background-color: F2F2F2;
+/*------------------------------------*\
+  #GENERIC
+\*------------------------------------*/
+.grid-container-2-col {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  row-gap: 3rem;
+}
+
+.col1 {
+  grid-column-start: 1;
+}
+
+.col2 {
+  grid-column-start: 2;
+}
+
+.row1 {
+  grid-row-start: 1;
+}
+
+.col1-2 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.row2 {
+  grid-row-start: 2;
+}
+
+.row3 {
+  grid-row-start: 3;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+/*------------------------------------*\
+  #BODY
+\*------------------------------------*/
+body, .body_education, .body_cv {
+  background-color: #f2f2f2;
+  padding: 0;
+  margin: 0;
 }
 
 section {
@@ -41,35 +91,136 @@ section {
   /* Om du vill lägga till fyllnad inuti varje avsnitt */
 }
 
-/* RUBRIKER */
-h1 {
-  color: white;
-  text-align: left;
-  font-family: croissant one, serif;
-}
-@media (min-width: 650px) {
-  h1 {
-    font-size: 30px;
-  }
-}
-@media (min-width: 650px) {
-  h1 {
-    font-size: 81px;
-  }
-}
-
-h2 {
-  color: black;
+/*------------------------------------*\
+  #TEXT BASE
+\*------------------------------------*/
+.text-montserrat, .project_button, p, h3 {
   text-align: left;
   font-family: Montserrat, Arial, sans-serif;
   font-weight: normal;
-  font-size: 36px;
 }
 
-/* HEADER */
+.text-croissant, .hello_cv, h2, h1 {
+  text-align: left;
+  font-family: croissant one, serif;
+  font-weight: normal;
+}
+
+/*------------------------------------*\
+  #HEADERS
+\*------------------------------------*/
+/* Ragna H1 */
+h1 {
+  color: black;
+  font-size: 5.1875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  /*   // Om skärmbredden är mindre än 650 pixlar
+  font-size: 30px;
+  // Om skärmbredden är åtminstone 650 pixlar
+  @media (min-width: $device_large) {
+    // Sätt en mindre textstorlek så att texten får plats.
+  font-size: 81px;
+  } */
+}
+
+/* Ragna H2 */
+h2 {
+  color: black;
+  font-size: 4.0625rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+/* Ragna Rubrik Body */
+h3 {
+  color: black;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 3.125rem; /* 138.889% */
+  /*   @media (min-width: $device_medium) {
+    font-size: 24px;
+  } */
+}
+
+/*------------------------------------*\
+  #OTHER TEXT
+\*------------------------------------*/
+/* Ragna body */
+p {
+  color: black;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.875rem; /* 166.667% */
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  /*   @media (min-width: $device_medium) {
+    font-size: 1.125rem;
+    word-break: normal;
+  } */
+}
+
+/* Ragna footer rubrik */
+.footer-text-bold {
+  font-family: Montserrat;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5rem; /* 150% */
+}
+
+/* Ragna footer regular */
+.footer-text-regular {
+  font-family: Montserrat;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem; /* 150% */
+}
+
+/* Ragna citat */
+.citat-text {
+  font-family: Montserrat;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 4.5rem; /* 150% */
+}
+
+.right-align {
+  text-align: right;
+}
+
+.left-align {
+  text-align: left;
+}
+
+/*------------------------------------*\
+  #IMAGES
+\*------------------------------------*/
+.img-scale {
+  max-width: 100%;
+}
+
+.logo {
+  height: 2rem;
+}
+
+/*------------------------------------*\
+  #PAGE HEADER
+\*------------------------------------*/
 .header {
   display: flex;
   flex-direction: column;
+  background-color: #f2f2f2;
+  margin: 0;
 }
 
 .image_and_menu_container {
@@ -82,6 +233,7 @@ h2 {
   align-items: center;
   padding-left: 5rem;
   height: 3.75rem;
+  background-color: #f2f2f2;
 }
 
 /* Start-info för bild med text */
@@ -91,24 +243,38 @@ h2 {
   /* Ändra textjusteringen till vänster */
 }
 
+.header_image_text_small {
+  position: relative;
+  text-align: left;
+  width: 100%;
+  height: 30vw;
+  /* Ändra textjusteringen till vänster */
+}
+
 /* Storlek på bild med text */
-.headerbild {
+.headerbild_index {
   width: 100%;
   /* Anpassa bilden till bredden av behållaren */
 }
 
+/* Storlek på bild med text */
+.header_image_small {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Anpassa bilden till bredden av behållaren */
+}
+
 /* Stil för rubrik på bild */
-.rubriktext {
+.rubriktext_index {
   position: absolute;
   text-align: right;
   /* Placera rubriken på bilden */
   top: 50%;
   /* Justera vertikalt till mitten */
   left: 10px;
-  /* Placera till vänster med en lämplig marginal */
-  transform: translateY(-50%);
   /* Centrera vertikalt */
-  /*background-color: rgba(0, 0, 0, 0);*/
+  transform: translateY(-50%);
   /* Bakgrundsfärg med genomskinlighet */
   color: #fff;
   /* Textfärg */
@@ -116,19 +282,52 @@ h2 {
   /* Lägg till lite utrymme runt texten */
 }
 
-/* NAV */
+/* Stil för rubrik på bild */
+.header_text_centered {
+  position: absolute;
+  text-align: center;
+  /* Placera rubriken på bilden */
+  top: 0%;
+  /* Justera vertikalt till mitten */
+  left: 50%;
+  /* Centrera vertikalt */
+  transform: translateX(-50%);
+  /* Bakgrundsfärg med genomskinlighet */
+  color: #fff;
+  /* Textfärg */
+  padding: 10px;
+  /* Lägg till lite utrymme runt texten */
+}
+
+/*------------------------------------*\
+  #NAV MENU
+\*------------------------------------*/
 .menu_box {
   align-items: start;
   justify-content: end;
   column-gap: 1rem;
-  background-color: F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .menu {
   display: flex;
+  justify-content: center;
+  flex-shrink: 1;
   column-gap: 0.5rem;
-  width: 1.3rem;
-  rotate: 90deg;
+  width: 2rem;
+  transform: rotate(-90deg) translateX(-200%);
+  transform-origin: right bottom;
+}
+
+.menu a {
+  font-family: Montserrat;
+  color: var(--mrk-brun, #261109);
+  text-align: center;
+  font-size: 0.9375rem;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: normal;
+  letter-spacing: -0.01406rem;
 }
 
 nav a {
@@ -137,19 +336,139 @@ nav a {
   text-decoration: none;
 }
 
-/* BODY */
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
+/*------------------------------------*\
+  #PROJECTS
+\*------------------------------------*/
+.project_img {
+  width: 75%;
+}
+@media (min-width: 850px) {
+  .project_img {
+    width: auto;
+    position: relative;
+    left: 60%;
+    transform: translateX(-50%);
+  }
 }
 
-/* FOOTER */
-.footer_text {
+.project_button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
   color: black;
-  text-align: left;
-  font-family: Montserrat, Arial, sans-serif;
+  text-decoration: underline;
+}
+
+/*------------------------------------*\
+  #CV
+\*------------------------------------*/
+.hello_cv {
+  color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+  font-size: 40px;
+}
+@media (min-width: 450px) {
+  .hello_cv {
+    font-size: 81px;
+  }
+}
+@media (min-width: 850px) {
+  .hello_cv {
+    font-size: 221px;
+  }
+}
+
+.body_cv {
+  background-color: #968fa6;
+  color: #f2f2f2;
+}
+
+.body_cv p {
+  color: #f2f2f2;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.body_cv h3,
+h4,
+h5 {
+  color: #f2f2f2;
+  font-size: 36px;
+  line-height: normal;
   font-weight: normal;
-  font-size: 15px;
+}
+
+.body_cv h5 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+.internship_header {
+  margin: 0;
+}
+
+.internship_info {
+  margin: 0;
+  padding-left: 1rem;
+}
+
+/*------------------------------------*\
+  #EDUCATION
+\*------------------------------------*/
+.body_education {
+  background-color: #848c73;
+}
+
+.body_education p,
+h2,
+h3,
+h4,
+h5 {
+  text-align: right;
+  color: black;
+}
+
+.body_education h3 {
+  font-family: Montserrat;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 50px; /* 138.889% */
+  margin: 0;
+}
+
+.body_education h5 {
+  /* Ragna footer rubrik */
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+.body_education p {
+  /* Ragna body */
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+/*------------------------------------*\
+  #FOOTER
+\*------------------------------------*/
+.footer {
+  color: black;
+  background-color: #f2f2f2;
+  text-align: left;
 }
 
 /*# sourceMappingURL=style.css.map */
