--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -265,6 +265,8 @@ p {
 .header_bild_med_rubrik {
   position: relative;
   text-align: left;
+  width: 100%;
+  max-height: 700px;
   /* Ändra textjusteringen till vänster */
 }
 
@@ -279,6 +281,8 @@ p {
 /* Storlek på bild med text */
 .headerbild_index {
   width: 100%;
+  max-height: 700px;
+  object-fit: cover;
   /* Anpassa bilden till bredden av behållaren */
 }
 
@@ -329,35 +333,44 @@ p {
 \*------------------------------------*/
 
 .menu_box {
-  align-items: start;
-  justify-content: end;
-  column-gap: 1rem;
+  height: 100%;
+  width: 24px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  overflow-x: hidden;
   background-color: $light_background_color;
 }
 
-.menu {
+#menu {
   display: flex;
-  justify-content: center;
-  flex-shrink: 1;
-  column-gap: 0.5rem;
-  width: 2rem;
-  //rotate: -90deg;
-  transform: rotate(-90deg) translateX(-200%); // Rotera och flytta ned texten med 200% av dess egen höjd
-  transform-origin: right bottom;
-  //padding-left: 1rem;
-  //padding-top: 1rem;
+  gap: 10px;
+  margin-top: 3.75rem;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg)translateX(-25%);
 }
 
-.menu a {
+#menu a {
   font-family: Montserrat;
   color: var(--mrk-brun, #261109);
   text-align: center;
   font-size: 0.9375rem;
   font-style: normal;
   text-transform: uppercase;
-  //font-weight: 0;
   line-height: normal;
   letter-spacing: -0.01406rem;
+}
+
+#menu a:hover {
+  background-color: rgb(221, 221, 221);
+}
+
+.currentPage {
+  // underline text
+  text-decoration: underline;
+  color: red;
 }
 
 // Välj alla länkar (a) inne i nav-elementet
