- Lade till media queries for olika text-storlekar - Uppdaterade header-storlekar i cv.html

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -133,6 +133,18 @@ h1 {
   font-weight: 400;
   line-height: normal;
 
+  // Mellanstorlek - upp till stora devices
+  @media (max-width: $device_large) {
+    font-size: 40px;
+    word-break: normal;
+  }
+
+  // Liten storlek - upp till medium-devices
+  @media (max-width: $device_medium) {
+    font-size: 30px;
+    word-break: normal;
+  }
+
   /*   // Om skärmbredden är mindre än 650 pixlar
   font-size: 30px;
   // Om skärmbredden är åtminstone 650 pixlar
@@ -150,6 +162,13 @@ h2 {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+
+    // Mellanstorlek - upp till stora devices
+    @media (max-width: $device_large) {
+      font-size: 1.5rem;
+      word-break: normal;
+    }
+
 }
 
 /* Ragna Rubrik Body */
@@ -161,9 +180,12 @@ h3 {
   font-weight: 400;
   line-height: 3.125rem; /* 138.889% */
 
-  /*   @media (min-width: $device_medium) {
-    font-size: 24px;
-  } */
+  // Mellanstorlek - upp till stora devices
+  @media (max-width: $device_large) {
+    font-size: 1.5rem;
+    word-break: normal;
+  }
+
 }
 
 /*------------------------------------*\
@@ -185,11 +207,19 @@ p {
   -ms-hyphens: auto;
   hyphens: auto;
 
-  /*   @media (min-width: $device_medium) {
-    font-size: 1.125rem;
+  // Mellanstorlek - upp till stora devices
+  @media (max-width: $device_large) {
+    font-size: 0.8rem;
     word-break: normal;
-  } */
+  }
+
 }
+
+.cv-duration-text{
+  @extend .footer-text-bold;
+  color:white;
+}
+
 
 /* Ragna footer rubrik */
 .footer-text-bold {
@@ -394,6 +424,27 @@ nav a {
   #CV
 \*------------------------------------*/
 
+.img-scale {
+  width: 100%;
+  height: 100%;
+  background-color: pink;
+  box-shadow:
+    0px 0px 0 0px #f9f9fb,
+    0px 0 28px 0 rgba(34, 33, 81, 0.01),
+    28px 28px 28px 0 rgba(34, 33, 81, 0.25);
+  transition: border-radius 0.5s, transform 0.5s;
+}
+ 
+.img-scale:hover {
+  border-radius: 50%; /* Turns the square into a circle on hover */
+  transform: rotate(360deg); /* Rotates the element 360 degrees on hover */
+}
+ 
+.img-scale:hover {
+  border-radius: 50%; /* Turns the square into a circle on hover */
+  transform: rotate(360deg); /* Rotates the element 360 degrees on hover */
+}
+
 .hello_cv {
   @extend .text-croissant;
 
@@ -464,32 +515,12 @@ h5 {
   background-color: $green_background_color;
 }
 
-.body_education p,
-h2,
-h3,
-h4,
-h5 {
-  text-align: right;
-  color: black;
-}
 
 .body_education h3 {
-  font-family: Montserrat;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 50px; /* 138.889% */
+  line-height: 50px; 
   margin: 0;
 }
 
-.body_education h5 {
-  /* Ragna footer rubrik */
-  font-family: Montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px; /* 150% */
-}
 
 .body_education p {
   /* Ragna body */
