--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -50,6 +50,7 @@ $device_large: 850px;
   display: grid;
   grid-template-columns: 50% 50%;
   row-gap: 3rem;
+  //background-color: red;
 }
 
 .col1 {
@@ -85,6 +86,24 @@ $device_large: 850px;
   flex-direction: column;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-align-end {
+  justify-content: end;
+  align-content: flex-end;
+}
+
+.flex-center {
+  justify-content: center;
+  align-content: center;
+}
+
+.flex-align-self-center {
+  align-self: center;
+}
+
 .padding-1 {
   padding: 1rem;
 }
@@ -92,7 +111,7 @@ $device_large: 850px;
 .center
 {
   // center image
-  display: block;
+  //display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -105,6 +124,7 @@ body {
   background-color: $light_background_color;
   padding: 0;
   margin: 0;
+  margin-right: 24px;
 }
 
 section {
@@ -505,10 +525,10 @@ nav a {
 \*------------------------------------*/
 
 .img_prj{
-  width: 100%;
-  padding: 1rem;
-  object-fit: cover;
-
+  width: 70%;
+  //padding: 1rem;
+  //object-fit: cover;
+  //background-color: green;
 }
 
 
