--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -33,6 +33,8 @@
 $light_background_color: #f2f2f2;
 $purple_background_color: #968fa6;
 $green_background_color: #848c73;
+$plint_background_color: #BFA83F;
+
 $light_text_color: $light_background_color;
 $header_color: black;
 $paragraph_color: black;
@@ -395,6 +397,22 @@ p, li{
   /* Lägg till lite utrymme runt texten */
 }
 
+.header_text_right {
+  position: absolute;
+  text-align: center;
+  /* Placera rubriken på bilden */
+  top: 25%;
+  /* Justera vertikalt till mitten */
+  left: 50%;
+  /* Centrera vertikalt */
+  //transform: translateX(-50%);
+  /* Bakgrundsfärg med genomskinlighet */
+  color: #fff;
+  /* Textfärg */
+  padding: 10px;
+  /* Lägg till lite utrymme runt texten */
+}
+
 /*------------------------------------*\
   #NAV MENU
 \*------------------------------------*/
@@ -520,20 +538,8 @@ nav a {
   color: $light_background_color;
 }
 
-/*------------------------------------*\
-  # PROJECTS - PINT
-\*------------------------------------*/
-
-.img_prj{
-  width: 70%;
-  //padding: 1rem;
-  //object-fit: cover;
-  //background-color: green;
-}
-
-
 // Väljer alla p som ligger in i element med class="body_cv"
-.body_cv p,li {
+.body_cv p {
   color: $light_text_color;
   font-family: Montserrat;
   font-size: 18px;
@@ -569,6 +575,41 @@ nav a {
   margin: 0;
   padding-left: 1rem;
 }
+
+/*------------------------------------*\
+  # PROJECTS - PINT
+\*------------------------------------*/
+
+.img_prj{
+  width: 70%;
+}
+
+.body_plint
+{
+  @extend body;
+
+  background-color: $plint_background_color;
+  color: black;
+}
+
+.body_plint h5 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+  // Väljer alla p som ligger in i element med class="body_cv"
+.body_plint p, li {
+  color: black;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
 
 /*------------------------------------*\
   #EDUCATION
