- Uppdaterade bilder - Skugga + rundning på bilder

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -106,6 +106,10 @@ $device_large: 850px;
   align-self: center;
 }
 
+.flex-align-self-end {
+  align-self: flex-end;
+}
+
 .padding-1 {
   padding: 1rem;
 }
@@ -581,7 +585,10 @@ nav a {
 \*------------------------------------*/
 
 .img_prj{
-  width: 70%;
+  border-radius: 6.997px;
+  background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+  box-shadow: 0px 3.99805px 3.99805px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 .body_plint
