--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -1,29 +1,34 @@
 /**
- * CONTENTS
+ * CONTENTS:
  *
  * SETTINGS
- * Global...............Globally-available variables and config.
- *
- * TOOLS
- * Mixins...............Useful mixins.
- *
+ * 
  * GENERIC
- * Normalize.css........A level playing field.
- * Box-sizing...........Better default `box-sizing`.
  *
- * BASE
+ * BODY
  * Headings.............H1–H6 styles.
  *
- * OBJECTS
- * Wrappers.............Wrapping and constraining elements.
+ * TEXT BASE
  *
- * COMPONENTS
- * Page-head............The main page header.
- * Page-foot............The main page footer.
- * Buttons..............Button elements.
+ * HEADERS
  *
- * TRUMPS
- * Text.................Text helpers.
+ * OTHER TEXT
+ *
+ * IMAGES
+ *
+ * PAGE HEADER
+ * 
+ * NAV MENU
+ *
+ * PROJECTS 
+ *
+ * CV 
+ *
+ * EDUCATION 
+ *
+ * FOOTER  
+ *
+ * VIDEO MODAL
  */
 
 /*------------------------------------*\
@@ -33,7 +38,7 @@
 $light_background_color: #f2f2f2;
 $purple_background_color: #968fa6;
 $green_background_color: #848c73;
-$plint_background_color: #BFA83F;
+$plint_background_color: #bfa83f;
 
 $light_text_color: $light_background_color;
 $header_color: black;
@@ -45,8 +50,6 @@ $device_large: 850px;
 /*------------------------------------*\
   #GENERIC
 \*------------------------------------*/
-
-
 
 .grid-container-2-col {
   display: grid;
@@ -114,8 +117,7 @@ $device_large: 850px;
   padding: 1rem;
 }
 
-.center
-{
+.center {
   // center image
   //display: block;
   margin-left: auto;
@@ -198,11 +200,11 @@ h2 {
   font-weight: 400;
   line-height: normal;
 
-    // Mellanstorlek - upp till stora devices
-    @media (max-width: $device_large) {
-      font-size: 1.5rem;
-      word-break: normal;
-    }
+  // Mellanstorlek - upp till stora devices
+  @media (max-width: $device_large) {
+    font-size: 1.5rem;
+    word-break: normal;
+  }
 }
 
 /* Ragna Rubrik Body */
@@ -236,7 +238,8 @@ h4 {
 \*------------------------------------*/
 
 /* Ragna body */
-p, li{
+p,
+li {
   @extend .text-montserrat; // använd alla egenskaper från klassen .text-montserrat
 
   color: $paragraph_color;
@@ -255,14 +258,12 @@ p, li{
     font-size: 0.8rem;
     word-break: normal;
   }
-
 }
 
-.cv-duration-text{
+.cv-duration-text {
   @extend .footer-text-bold;
-  color:$light_text_color;
+  color: $light_text_color;
 }
-
 
 /* Ragna footer rubrik */
 .footer-text-bold {
@@ -438,7 +439,7 @@ p, li{
   gap: 10px;
   margin-top: 3.75rem;
   writing-mode: vertical-lr;
-  transform: rotate(180deg)translateX(-25%);
+  transform: rotate(180deg) translateX(-25%);
 }
 
 #menu a {
@@ -500,18 +501,16 @@ nav a {
   width: 100%;
   height: 100%;
   background-color: pink;
-  box-shadow:
-    0px 0px 0 0px #f9f9fb,
-    0px 0 28px 0 rgba(34, 33, 81, 0.01),
+  box-shadow: 0px 0px 0 0px #f9f9fb, 0px 0 28px 0 rgba(34, 33, 81, 0.01),
     28px 28px 28px 0 rgba(34, 33, 81, 0.25);
   transition: border-radius 0.5s, transform 0.5s;
 }
- 
+
 .img-scale:hover {
   border-radius: 50%; /* Turns the square into a circle on hover */
   transform: rotate(360deg); /* Rotates the element 360 degrees on hover */
 }
- 
+
 .img-scale:hover {
   border-radius: 50%; /* Turns the square into a circle on hover */
   transform: rotate(360deg); /* Rotates the element 360 degrees on hover */
@@ -584,15 +583,13 @@ nav a {
   # PROJECTS - PINT
 \*------------------------------------*/
 
-.img_prj{
+.img_prj {
   border-radius: 6.997px;
   background: url(<path-to-image>), lightgray 50% / cover no-repeat;
   box-shadow: 0px 3.99805px 3.99805px 0px rgba(0, 0, 0, 0.25);
-
 }
 
-.body_plint
-{
+.body_plint {
   @extend body;
 
   background-color: $plint_background_color;
@@ -607,8 +604,9 @@ nav a {
   line-height: 24px; /* 150% */
 }
 
-  // Väljer alla p som ligger in i element med class="body_cv"
-.body_plint p, li {
+// Väljer alla p som ligger in i element med class="body_cv"
+.body_plint p,
+li {
   color: black;
   font-family: Montserrat;
   font-size: 18px;
@@ -616,7 +614,6 @@ nav a {
   font-weight: 400;
   line-height: 30px; /* 166.667% */
 }
-
 
 /*------------------------------------*\
   #EDUCATION
@@ -627,7 +624,6 @@ nav a {
 
   background-color: $green_background_color;
 }
-
 
 /*------------------------------------*\
   #FOOTER
@@ -702,12 +698,12 @@ nav a {
     width: 100%;
     height: 100vh;
     max-height: 85vh;
-   
+
     display: block;
   }
-  
+
   video {
-     object-fit: cover;
+    object-fit: cover;
   }
 
   .lvideo-close {
@@ -759,7 +755,7 @@ nav a {
     visibility: visible;
 
     &:after {
-     opacity: 0.5;
+      opacity: 0.5;
     }
   }
 
@@ -831,4 +827,3 @@ nav a {
     opacity: 0;
   }
 }
-
